[gd_scene load_steps=16 format=2]

[ext_resource path="res://addons/jc.godot.universal-sky-common/Examples/Scenes/PrimitivesBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/jc.godot.universal-sky/Code/Sky/SkyManager.gd" type="Script" id=2]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Shaders/Skypass.shader" type="Shader" id=3]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Shaders/ScatterFogPass.shader" type="Shader" id=4]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Scenes/Moon/MoonRender.tscn" type="PackedScene" id=5]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Assets/ThirdParty/Graphics/Textures/MilkyWay/Milkyway.jpg" type="Texture" id=6]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Assets/ThirdParty/Graphics/Textures/MilkyWay/StarField.jpg" type="Texture" id=7]
[ext_resource path="res://addons/jc.godot.universal-sky-common/Assets/MyAssets/Graphics/Textures/noise.jpg" type="Texture" id=8]
[ext_resource path="res://addons/jc.godot.universal-sky/Code/TimeOfDay/TimeOfDay.gd" type="Script" id=10]

[sub_resource type="Environment" id=1]
fog_color = Color( 0.74902, 0.752941, 1, 1 )
fog_depth_curve = 0.732043
tonemap_mode = 3
tonemap_white = 6.0
glow_enabled = true
glow_intensity = 0.13
glow_blend_mode = 1
glow_bicubic_upscale = true

[sub_resource type="ViewportTexture" id=2]

[sub_resource type="ShaderMaterial" id=3]
render_priority = -128
shader = ExtResource( 3 )
shader_param/_sun_disk_color = Color( 1.99219, 1.08267, 0.280152, 1 )
shader_param/_sun_disk_size = 0.015
shader_param/_sun_direction = Vector3( -1e-07, 0.88792, -0.459998 )
shader_param/_moon_color = Color( 1, 1, 1, 0.3 )
shader_param/_moon_size = 0.07
shader_param/_moon_direction = Vector3( -0.0856789, 0.183316, -0.979313 )
shader_param/_moon_matrix = Basis( 0, -0.996323, -0.0856789, -0.982928, -0.0157643, 0.183316, -0.183993, 0.0842161, -0.979313 )
shader_param/_color_correction_params = Vector3( 0, 0, 1.3 )
shader_param/_ground_color = Color( 0.3, 0.3, 0.3, 1 )
shader_param/_background_color = Color( 0.19, 0.19, 0.19, 0.3 )
shader_param/_stars_field_color = Color( 1, 1, 1, 1 )
shader_param/_stars_scintillation = 0.75
shader_param/_stars_scintillation_speed = 0.01
shader_param/_deep_space_matrix = Basis( -1, 7.3856e-08, 1.7913e-07, 1.93027e-07, 0.459998, 0.88792, -1.68213e-08, 0.88792, -0.459998 )
shader_param/_atm_darkness = 0.5
shader_param/_atm_sun_intensity = 30.0
shader_param/_atm_day_tint = Color( 0.784314, 0.854902, 0.988235, 1 )
shader_param/_atm_horizon_light_tint = Color( 0.988235, 0.698039, 0.505882, 1 )
shader_param/_atm_night_tint = Color( 0, 0, 0, 0 )
shader_param/_atm_params = Vector3( 1, 0, 0 )
shader_param/_atm_sun_mie_tint = Color( 1, 1, 1, 1 )
shader_param/_atm_sun_mie_intensity = 1.0
shader_param/_atm_moon_mie_tint = Color( 0.137255, 0.184314, 0.290196, 1 )
shader_param/_atm_moon_mie_intensity = 0.0
shader_param/_atm_beta_ray = Vector3( 4.06318e-06, 9.49404e-06, 2.31788e-05 )
shader_param/_atm_beta_mie = Vector3( 3.038e-08, 3.038e-08, 3.038e-08 )
shader_param/_atm_sun_partial_mie_phase = Vector3( 0.36, 1.64, 1.6 )
shader_param/_atm_moon_partial_mie_phase = Vector3( 0.36, 1.64, 1.6 )
shader_param/_clouds_coverage = 0.65
shader_param/_clouds_thickness = 0.024
shader_param/_clouds_absorption = 11.0
shader_param/_clouds_step = 10
shader_param/_clouds_noise_freq = 3.0
shader_param/_clouds_sky_tint_fade = 1.0
shader_param/_clouds_intensity = 7.0
shader_param/_clouds_size = 15.0
shader_param/_clouds_offset_speed = 0.01
shader_param/_clouds_offset = Vector3( 1, 0, 0 )
shader_param/_moon_texture = SubResource( 2 )
shader_param/_background_texture = ExtResource( 6 )
shader_param/_stars_field_texture = ExtResource( 7 )
shader_param/_noise_tex = ExtResource( 8 )
shader_param/_clouds_texture = ExtResource( 8 )

[sub_resource type="SphereMesh" id=4]
radial_segments = 32
rings = 16

[sub_resource type="ShaderMaterial" id=5]
render_priority = 123
shader = ExtResource( 4 )
shader_param/_density = 0.000735
shader_param/_sun_direction = Vector3( -1e-07, 0.88792, -0.459998 )
shader_param/_moon_direction = Vector3( -0.0856789, 0.183316, -0.979313 )
shader_param/_color_correction_params = Vector3( 0, 0, 1.3 )
shader_param/_atm_darkness = 0.5
shader_param/_atm_sun_intensity = 30.0
shader_param/_atm_day_tint = Color( 0.784314, 0.854902, 0.988235, 1 )
shader_param/_atm_horizon_light_tint = Color( 0.988235, 0.698039, 0.505882, 1 )
shader_param/_atm_night_tint = Color( 0, 0, 0, 0 )
shader_param/_atm_params = Vector3( 1, 0, 0 )
shader_param/_atm_sun_mie_tint = Color( 1, 1, 1, 1 )
shader_param/_atm_sun_mie_intensity = 1.0
shader_param/_atm_moon_mie_tint = Color( 0.137255, 0.184314, 0.290196, 1 )
shader_param/_atm_moon_mie_intensity = 0.0
shader_param/_atm_beta_ray = Vector3( 4.06318e-06, 9.49404e-06, 2.31788e-05 )
shader_param/_atm_beta_mie = Vector3( 3.038e-08, 3.038e-08, 3.038e-08 )
shader_param/_atm_sun_partial_mie_phase = Vector3( 0.36, 1.64, 1.6 )
shader_param/_atm_moon_partial_mie_phase = Vector3( 0.36, 1.64, 1.6 )
shader_param/_rayleigh_depth = 0.00071
shader_param/_mie_depth = 0.00071

[sub_resource type="QuadMesh" id=6]
size = Vector2( 2, 2 )

[node name="Main" type="Spatial"]

[node name="MainCam" type="Camera" parent="."]
transform = Transform( 0.0426777, -0.263263, -0.96378, 0, 0.964659, -0.263503, 0.999089, 0.0112457, 0.0411695, -7.13638, 2.59202, -0.614973 )
far = 5000.0

[node name="SunLight" type="DirectionalLight" parent="."]
transform = Transform( 0.178088, 0.978478, -0.104241, 0, 0.105934, 0.994373, 0.984015, -0.177086, 0.0188656, -0.104241, 0.994373, 0.0188657 )
light_color = Color( 0.992157, 0.917647, 0.886275, 1 )
shadow_enabled = true

[node name="MoonLight" type="DirectionalLight" parent="."]
transform = Transform( 0, -0.696541, -0.717517, 0.809186, 0.421578, -0.409254, 0.587552, -0.580604, 0.563632, -0.717516, -0.409254, 0.563632 )
visible = false
light_color = Color( 0.572549, 0.776471, 0.956863, 1 )
light_energy = 0.0
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="Spatial" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.28389, 0 )
layers = 8
update_mode = 1
max_distance = 16384.0
extents = Vector3( 2000, 2000, 2000 )
cull_mask = 4
interior_enable = true
interior_ambient_color = Color( 0.172549, 0.2, 0.321569, 1 )

[node name="TimeOfDay" type="Node" parent="."]
script = ExtResource( 10 )
system_sync = false
total_cycle_in_minutes = 3.0
total_hours = 4.375
day = 27
month = 2
year = 2021
compute_moon_coords = true
latitude = 0.0
longitude = 0.0
utc = 0.0
celestials_update_time = 0.0
sky_node_path = NodePath("../SkyManager")

[node name="SkyManager" type="Node" parent="."]
script = ExtResource( 2 )
sky_visible = true
skydome_radius = 10.0
contrast_level = 0.0
tonemaping = 0.0
exposure = 1.3
ground_color = Color( 0.3, 0.3, 0.3, 1 )
sky_layers = 4
sky_render_priority = -128
sun_altitude = -27.387
sun_azimuth = 0.0
sun_disk_color = Color( 0.996094, 0.541334, 0.140076, 1 )
sun_disk_multiplier = 2.0
sun_disk_size = 0.015
sun_light_path = NodePath("")
sun_light_color = Color( 0.984314, 0.843137, 0.788235, 1 )
sun_horizon_light_color = Color( 1, 0.384314, 0.243137, 1 )
sun_light_energy = 1.0
moon_altitude = -79.437
moon_azimuth = 5.0
moon_color = Color( 1, 1, 1, 0.3 )
moon_size = 0.07
moon_texture_size = 2
enable_set_moon_texture = false
moon_light_path = NodePath("")
moon_light_color = Color( 0.572549, 0.776471, 0.956863, 1 )
moon_light_energy = 0.3
deep_space_follow_sun = true
deep_space_euler = Vector3( -1.0928, 3.14159, 4.19625e-07 )
background_color = Color( 0.19, 0.19, 0.19, 0.3 )
enable_set_background_texture = false
stars_field_color = Color( 1, 1, 1, 1 )
enable_set_stars_field_texture = false
stars_scintillation = 0.75
stars_scintillation_speed = 0.01
atm_darkness = 0.5
atm_wavelenghts = Vector3( 680, 550, 440 )
atm_sun_intensity = 30.0
atm_day_tint = Color( 0.784314, 0.854902, 0.988235, 1 )
atm_horizon_light_tint = Color( 0.988235, 0.698039, 0.505882, 1 )
atm_night_scatter_mode = 0
atm_night_tint = Color( 0.168627, 0.2, 0.25098, 1 )
atm_params = Vector3( 1, 0, 0 )
atm_thickness = 0.7
atm_mie = 0.07
atm_turbidity = 0.001
atm_sun_mie_tint = Color( 1, 1, 1, 1 )
atm_sun_mie_intensity = 1.0
atm_sun_mie_anisotropy = 0.8
atm_moon_mie_tint = Color( 0.137255, 0.184314, 0.290196, 1 )
atm_moon_mie_intensity = 0.7
atm_moon_mie_anisotropy = 0.8
fog_visible = true
fog_density = 0.000735
fog_rayleigh_depth = 0.00071
fog_mie_depth = 0.00071
fog_layers = 524288
fog_render_priority = 123
clouds_thickness = 0.024
clouds_coverage = 0.65
clouds_absorption = 11.0
clouds_step = 10
clouds_noise_frequency = 3.0
clouds_sky_tint_fade = 1.0
clouds_intensity = 7.0
clouds_size = 15.0
clouds_offset = Vector3( 1, 0, 0 )
clouds_offset_speed = 0.01
clouds_enable_set_texture = false

[node name="SkyNode" type="MeshInstance" parent="SkyManager"]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 1e-07, 1e-07, 1e-07 )
layers = 4
material_override = SubResource( 3 )
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource( 4 )
material/0 = null

[node name="FogNode" type="MeshInstance" parent="SkyManager"]
layers = 524288
material_override = SubResource( 5 )
cast_shadow = 0
extra_cull_margin = 16384.0
mesh = SubResource( 6 )
material/0 = null

[node name="MoonRender" parent="SkyManager" instance=ExtResource( 5 )]
size = Vector2( 256, 256 )
